# python-lessons

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  404.html  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-checks.yml  ci-deployment.yml
adr/001-poetry/: index.html
adr/002-mkdocs/: index.html
adr/003-spelling/: index.html
adr/004-deployment/: index.html
adr/005-maintenance/: index.html
adr/006-ai-code-agents/: index.html
advanced/concurrency_parallelism/: index.html
advanced/decorators/: index.html
advanced/lambda_functions/: index.html
advanced/observer_pattern/: index.html
advanced/strategy_pattern/: index.html
assets/stylesheets/: extra.css
beginner/: check_is_instance.py  class_methods.py  static_methods.py
beginner/check_is_instance/: index.html
beginner/classes_and_objects/: index.html
beginner/collection_default_dict/: collection_default_dict.ipynb  collection_default_dict.py
beginner/dataclasses/: index.html
beginner/dict_vs_defaultdict/: README.md  dict.ipynb  index.html
beginner/tests/: test_calculator.py  test_is_instance.py  test_pizza.py
contributing/docstring-standards/: index.html
cspell/: cspell.json
cspell/dictionaries/: github-workflows.txt  lessons.txt  project.txt  python.txt
docs/: check_is_instance.md  index.md  quality-scores.md  template.md
docs/adr/: 001-poetry.md  002-mkdocs.md  003-spelling.md  004-deployment.md  005-maintenance.md  006-ai-code-agents.md
docs/advanced/: concurrency_parallelism.md  decorators.md  lambda_functions.md  observer_pattern.md  state_pattern.md  strategy_pattern.md
docs/assets/stylesheets/: extra.css
docs/beginner/: check_is_instance.md  classes_and_objects.md  dataclasses.md  dict_vs_defaultdict.md
docs/contributing/: docstring-standards.md
docs/plans/: IMPROVEMENT_PLAN.md
html/python-lessons/: index.html
html/python-lessons/beginner/: check_is_instance.html  class_methods.html  index.html  static_methods.html
plans/IMPROVEMENT_PLAN/: index.html
quality-scores/: index.html
search/: search_index.json
src/advanced/concurrency_parallelism/: __init__.py  concurrency.py  parallelism.py  utils.py
src/advanced/decorators/: __init__.py  measure.py  retry.py  singleton.py
src/advanced/lambda_functions/: __init__.py  lambda_functions.py
src/advanced/observer/: __init__.py  observer.py
src/advanced/state_pattern/: __init__.py  state.py
src/advanced/strategy_pattern/: __init__.py  strategy.py
src/beginner/check_is_instance/: __init__.py  check_is_instance.py
src/beginner/classes_and_objects/: __init__.py  classes_and_objects.py
src/beginner/dataclass/: dataclasses.py
src/beginner/dataclasses/: __init__.py  dataclasses.py
src/beginner/dict_vs_defaultdict/: __init__.py  dict_vs_defaultdict.py
template/: index.html
tests/: conftest.py  pyproject.toml
tests/advanced/concurrency_parallelism/: test_async_methods.py  test_concurrent_with_thread_pool.py  test_no_parallelism.py  (+2 more)
(+12 files in other folders)
