[tool.coverage.report]
skip_empty = true
fail_under = 100
show_missing = true
skip_covered = true
exclude_also = [
  "@(abc\\.)?abstractmethod",
]

[tool.poetry]
name = "python-lessons"
version = "0.1.0"
description = "Python lessons"
authors = ["Javier Gil <javiergilmont@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.2"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-material = "^9.2.8"
mkdocs-git-revision-date-localized-plugin = "^1.2.4"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
exclude = [
  ".git",
  "__pycache__",
  ".tox",
  ".mypy_cache",
  ".venv",
]
lint.select = [
  "F",
  "E",
  "W",
  "I",
  "N",
  "D",
  "COM",
  "DTZ",
  "G",
  "T20",
  "Q",
  "RET",
  "ARG",
  "PL",
  "S",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]
