[tool.coverage.report]
skip_empty = true
fail_under = 100
show_missing = true
skip_covered = true
exclude_also = [
  "@(abc\\.)?abstractmethod",
]

[tool.poetry]
name = "python-lessons"
version = "0.1.0"
description = "Python lessons"
authors = ["Javier Gil <javiergilmont@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.6.1"
mkdocstrings = "^1.0.0"
mkdocs-material = "^9.7.1"
mkdocs-git-revision-date-localized-plugin = "^1.5.0"
loguru = "^0.7.3"
mkdocs-autorefs = "^1.4.3"
mkdocs-material-extensions = "^1.3.1"
mkdocstrings-python = "^2.0.1"
mutmut = "^3.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80
exclude = [
  ".git",
  "__pycache__",
  ".tox",
  ".mypy_cache",
  ".venv",
]
lint.select = [
  "F",
  "E",
  "W",
  "I",
  "N",
  "D",
  "COM",
  "DTZ",
  "G",
  "T20",
  "Q",
  "RET",
  "ARG",
  "PL",
  "S",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S"]

[tool.pytest.ini_options]
pythonpath = "src"

[tool.mutmut]
paths_to_mutate = ["src/"]
runner = "python -m pytest tests/"
